[package]
name = "photosort"
version = "0.1.0"
authors = ["David Wilemski <david@wilemski.org>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "0.2", features = ["full"] }
